--- a/configuration.html
+++ b/configuration.html
@@ -103,7 +103,7 @@
       </p>
   
       <p>
-        Please note: Keypressure is currently implemented the same as Aftertouch
+        Please note: Keypressure is currently implemented the same as Velocity
         <br>
         <br>
         If you want to use the Polyphonic modes, you have to start at the first output (or third in the duo mode).
