--- a/update.html
+++ b/update.html
@@ -66,6 +66,7 @@
     <div style="margin-bottom: 50px; float:none;">
       <h4>Check Midi Status</h4>
       <button onclick="CheckUsbMidiAlive()">Alive</button>
+      <button onclick="MidiSetUpdateBits()">SetUpdateBitsAndReset</button>
     </div>
 
 
