Console Visibility updated

--- a/calibration.html
+++ b/calibration.html
@@ -43,8 +43,9 @@
       </div>
     </div>
   </nav>
-  <div style="margin-top:50px; margin-left:20px">
-    <p id="logger" style="overflow-y: scroll; height: 400px; width: 400px;"></p>
+  <div style="margin-top:50px; margin-left:20px;">
+    <h3>Console Output:</h3>
+    <p id="logger" style="overflow-y: scroll; height: 400px; width: 400px; background-color:rgb(231, 229, 226);"></p>
   </div>
   <div class="container" style="margin-bottom: 20px; margin-top:50px;">
 
